# midas

./: .gitignore  CMakeLists.txt  README.md
include/: dither.hpp  image.hpp  palette.hpp
palettes/: default.txt  m&ms.txt
scripts/: run.bat
src/: dither.cpp  image.cpp  main.cpp  palette.cpp
